<resources>
    <string name="app_name">Dice Olympics</string>


    <!--Content descriptions-->
    <string name="MuteUnMuteButton">Mute/UnMute Button</string>
    <string name="DiceOlympicLogo">Dice Olympic Logo</string>


    <!--app entrance-->
    <string name="singlePlayer">Single Player</string>
    <string name="twoPlayers">Two Players</string>
    <string name="exitApp">Exit App</string>


    <!--game entrance-->
    <string name="Start">Start Game</string>
    <string name="Instructions">Instructions</string>
    <string name="Back">Back</string>


    <!--Names Input-->
    <string name="EnterPlayersNames">Enter Players Names</string>
    <string name="PlayerOneHeadline">Player One</string>
    <string name="PlayerOneHint">Enter Here Player One\'s Name</string>
    <string name="PlayerTwoHeadline">Player Two</string>
    <string name="PlayerTwoHint">Enter Here Player Two\'s Name</string>
    <string name="NoInputForAnyPlayer">No Input For Any Player</string>
    <string name="NoInputForPlayerOne">No Input For Player One</string>
    <string name="NoInputForPlayerTwo">No Input For Player Two</string>
    <string name="IllegalInputForPlayerOne">Illegal Input For Player One</string>
    <string name="IllegalInputForPlayerTwo">Illegal Input For Player Two</string>
    <string name="BothInputsIllegal">Both Name Inputs Are Illegal</string>
    <string name="chooseGame">Choose A Game</string>


    <!--Exit App-->
    <string name="areYouSureToExit">Are You Sure?</string>
    <string name="noWantToStay">No, Stay</string>
    <string name="yesWantToExit">Yes, Exit</string>


    <!--New game-->
    <string name="newPlayers">New Players</string>
    <string name="samePlayers">Same Players</string>


    <!--Winner Screen-->
    <string name="theWinner">The winner is</string>
    <string name="playAgain">Play Again</string>
    <string name="playAgainSamePlayers">Play Again Same Players</string>
    <string name="backHome">Home</string>
    <string name="exitGame">Exit Game</string>
    <string name="newGame">New Game</string>
    <string name="ScoreBoard">SCOREBOARD</string>
    <string name="newScore">New Score</string>
    <string name="SameScore">Same Score</string>
    <string name="noWinner1">No Winner This Time</string>
    <string name="noWinner2">The game Ended Up\nin draw</string>


    <!--Choose Game-->
    <string name="PlayPigDice">Play Pig Dice</string>
    <string name="PlayMidnight">Play Midnight</string>


    <!--Pig Dice instructions-->
    <string name="Pigdice_Goal1H">Goal</string>
    <string name="Pigdice_Goal2">Be the first player to reach 100 points</string>
    <string name="Pigdice_Gameplay1H">Gameplay</string>
    <string name="Pigdice_Gameplay2">On a turn, a player rolls the die repeatedly until either:</string>
    <string name="Pigdice_Gameplay3">\u25CF A 1 is rolled</string>
    <string name="Pigdice_Gameplay4">\u25CF The player chooses to hold (stop rolling)</string>
    <string name="Pigdice_Gameplay5">If a 1 is rolled, that player\'s turn ends and no points are earned.</string>
    <string name="Pigdice_GamePlay6">If the player chooses to hold, all of the points rolled during that turn are added to his or her score.</string>
    <string name="Pigdice_ScoringExamples1H">Scoring Examples</string>
    <string name="Pigdice_ScoringExamples2">Example 1: Sherri rolls a 3 and decides to continue. She then chooses to roll seven more times (6, 6, 6, 4, 5, 6, 1). Because she rolled a 1, Sherri\'s turn ends and she earns 0 points.</string>
    <string name="Pigdice_ScoringExamples3">Example 2: Craig rolls a 6 and decides to continue. He then chooses to roll four more times (3, 4, 2, 6) and decides to hold. Craig earns 21 points for this turn (6+3+4+2+6=21).</string>
    <string name="Pigdice_GameEnd1H">Game End</string>
    <string name="Pigdice_GameEnd2">When a player reaches a total of 100 or more points, the game ends and that player is the winner.</string>


    <!--Pig Dice game-->
    <string name="Pigdice_TotalScore">Total Score</string>
    <string name="Pigdice_currentScore">Current Score</string>
    <string name="Pigdice_RollDice">Roll The Dice</string>
    <string name="Pigdice_saveScore">Save Score</string>


    <!--Midnight instructions-->
    <string name="Midnight_Goal1H">Goal</string>
    <string name="Midnight_Goal2">With six dice, obtain a 1 and 4 and get the highest score possible with the other 4 dice, max score of 24.</string>
    <string name="Midnight_Gameplay1H">Gameplay</string>
    <string name="Midnight_Gameplay2">Six dice are required. Being the first player is a disadvantage so the starting player is determined by the lowest roll.</string>
    <string name="Midnight_Gameplay3">Player begins by rolling all six dice. After each roll the player is required to keep at least one die and re-roll the remaining. Once a dice is kept you can no longer roll it.  A turn ends when all dice have been held.</string>
    <string name="Midnight_Gameplay4">A player must keep a 1 and a 4 or else they are disqualified.  The remaining four dice are totaled, the maximum score for a turn is 24.</string>
    <string name="Midnight_Gameplay5">The winner is the player with the highest score.</string>
    <string name="Midnight_ScoringExamples1H">Scoring Examples</string>
    <string name="Midnight_ScoringExamples2">Example 1: Sherri rolls and has (6, 6, 6, 4, 5, 1). Because she has a 1 and 4, Sherri earns 23 points.(6+ 6+ 6+ 5= 23)</string>
    <string name="Midnight_ScoringExamples3">Example 2: Craig rolls and has (6, 6, 6, 4, 5, 4). Because he has no 1 (only a 4), Craig earns 0 points.</string>
    <string name="Midnight_ScoringExamples4">Example 3: Brandon rolls and has (6, 6, 6, 1, 5, 3). Because he has no 4 (only a 1), Brandon earns 0 points.</string>

    <!--Midnight game-->
    <string name="Score">Score</string>
    <string name="endTurn">End Turn</string>
    <string name="endGame">End Game</string>
    <string name="noDiceWereChosen">Choose dice before rolling</string>
    <string name="RollDice">Roll Dice</string>

    <!--yatzee game-->
    <string name="Low_Score">Low Score</string>
    <string name="High_Score">High Score</string>
    <string name="Zero" translatable="false">0</string>
    <string name="Aces">Aces</string>
    <string name="Twos">2\'s</string>
    <string name="Threes">3\'s</string>
    <string name="Fours">4\'s</string>
    <string name="fives">5\'s</string>
    <string name="sixs">6\'s</string>
    <string name="Three_Of_A_Kind">Three Of A Kind</string>
    <string name="Four_Of_A_Kind">Four Of A Kind</string>
    <string name="Full_House">Full House</string>
    <string name="Small_Straight">Small Straight</string>
    <string name="Large_Straight">Large Straight</string>
    <string name="Yatzee">Yahtzee</string>
    <string name="Chance">Chance</string>
    <string name="Total_Score">Total Score</string>
    <string name="Cant_Roll">Cant Roll Choose category</string>
    <string name="Cant_Choose">Cant Choose this category</string>
    <string name="Enter_New_Champ_Name">Enter Your Name</string>
    <string name="Save"> Save </string>
    <string name="IllegalInputForChamp">Illegal Input</string>
    <string name="Saved">Saved</string>
    <string name="MustThrow">Must Throw at least once</string>


    <!--yatzee instructions-->
    <string name="yatzee_goal">Goal</string>
    <string name="yatzee_goal_content">The object of Yahtzee is to obtain the highest score from throwing 5 dice. The game consists of 13 rounds. In each round, you roll the dice and then score the roll in one of 13 categories. You must score once in each category. The score is determined by a different rule for each category. The game ends once all 13 categories have been scored.</string>
    <string name="yatzee_Game_start_headline"> Game Start</string>
    <string name="yatzee_Game_Start">To start with, roll all the dice. After rolling you can either score the current roll (see below), or re-roll any or all of the dice. You may only roll the dice a total of 3 times. After rolling 3 times you must choose a category to score. You may score the dice at any point in the round, i.e. it doesn\'t have to be after the 3rd roll.</string>
    <string name="yatzee_Scoring_headline">Scoring</string>
    <string name="yatzee_Scoring">To score your combination of 5 dice, you click one of the 13 boxes. There are two sections to the score table - the Upper Section and the Lower Section. Once a box has been scored, it cannot be scored again for the rest of the game (except the Yahtzee category), so choose wisely.</string>
    <string name="yatzee_Upper_Section_Scoring_headline">Upper Section Scoring</string>
    <string name="yatzee_Upper_Section_Scoring">If you score in the upper section of the table, your score is the total of the specified die face.
So if you roll:
5 - 2 - 5 - 6 - 5 and score in the Fives category, your total for the category would be 15, because there are three fives, which are added together.
If the One, Three or Four Categories were selected for scoring with this roll, you would score a zero.

Bonus If the total of Upper scores is 63 or more, add a bonus of 35. Note that 63 is the total of three each of 1s, 2s, 3s, 4s, 5s and 6s.</string>
    <string name="yatzee_Lower_Section_Scoring_headline">Lower Section Scoring</string>
    <string name="yatzee_Lower_Section_Scoring">In the lower scores, you score either a set amount, or zero if you don\'t satisfy the category requirements.

    3 and 4 of a kind For 3 of a kind you must have at least 3 of the same die faces. You score the total of all the dice. For 4 of a kind you would need 4 die faces the same.

    Small and Large Straight A Straight is a sequence of consecutive die faces, where a small straight is 4 consecutive faces, and a large straight 5 consecutive faces.
    Small straights score 30 and a large 40 points.
    So if you rolled:
    2 - 3 - 2 - 5 - 4
    you could score 30 in small straight or 0 in large straight.

    Full House A Full House is where you have 3 of a kind and 2 of a kind. Full houses score 25 points.
    i.e.:
    3 - 3 - 2 - 3 - 2
    would score 25 in the Full House category.
    First Yahtzee A Yahtzee is 5 of a kind and scores 50 points, although you may elect NOT to score it as a yahtzee, instead choosing to take it as a top row score and safegaurd you bonus.
    Chance You can roll anything and be able to put it in the Chance category. You score the total of the die faces.</string>
    <string name="yatzee_Dump_Score_headline">Scratch or Dump scores.</string>
    <string name="yatzee_Dump_Score">You can score any roll in any category at any time, even if the resulting score is zero. Eg, you
can take 2-3-3-4-6 in the 5\'s category. It will score 0. This could be used near the end of a game to lose a poor roll against a difficult-to-get category that you've failed to fill (eg, long straight or yahtzee).</string>


    <!--yatzee top player-->
    <string name="Top_Player">Top Player</string>
    <string name="withscore">With Score Of</string>

    <!--yatzee end screen-->
    <string name="Your_Score">Your Final Score Is:</string>
    <string name="Your_the_best"> Your Set New High Score!!!!</string>


</resources>
