<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.beni.diceolympics.InputNames">

    <!--mute/unmute button-->
    <ImageButton
        android:contentDescription="@string/MuteUnMuteButton"
        android:id="@+id/inputNames_btn_mute"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        android:src="@drawable/unmute" />

    <!--Title Enter Players Names-->
    <TextView
        android:id="@+id/EnterPlayersNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/EnterPlayersNames"
        android:textColor="@color/colorAccent"
        android:textSize="32sp"
        android:textStyle="bold" />

    <!--Title Player One-->
    <TextView
        android:id="@+id/PlayerOneHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/PlayerOneHeadline"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!--Field to input Player One's name-->
    <EditText
        android:id="@+id/PlayerOneInput"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/colorAccent"
        android:gravity="center_horizontal"
        android:hint="@string/PlayerOneHint"
        android:textColorHint="@color/colorPrimaryDark" />

    <!--Title Player Two-->
    <TextView
        android:id="@+id/PlayerTwoHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/PlayerTwoHeadline"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!--Field to input Player Two's name-->
    <EditText
        android:id="@+id/PlayerTwoInput"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:gravity="center_horizontal"
        android:hint="@string/PlayerTwoHint"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorPrimaryDark" />

    <!--Proceed to Choose A Game button-->
    <Button
        android:id="@+id/InputNames_btn_chooseGame"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_bg_round"
        android:text="@string/chooseGame"
        android:textColor="@color/colorAccent"
        android:textSize="17sp" />

</LinearLayout>
